--- a/KaplanMeier_v2.6/index.html
+++ b/KaplanMeier_v2.6/index.html
@@ -83,9 +83,9 @@ function hide_arrows(){
 <!-- script to generate graph-->
 <script>
 
-var margin = {top: 100, right: 40, bottom: 50, left: 150}, //60, 20, 50, 50
+var margin = {top: 100, right: 40, bottom: 150, left: 150}, //60, 20, 50, 50
     width = 700 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    height = 600 - margin.top - margin.bottom;
 
 var timebisector = d3.bisector(function (d){return d.t_i;}).left;
 
@@ -142,7 +142,7 @@ d3.csv("data/dataSurvival.csv", function(error, data) {
       .call(xAxis)
       .append("text")
       .attr("x", 224.333)
-      .attr("y", margin.bottom )
+      .attr("y", 41 )
       .text("Time (months)");
 
   svg.append("g")
@@ -174,21 +174,27 @@ d3.csv("data/dataSurvival.csv", function(error, data) {
       .attr("d", line3);
 
   svg.append("text")
-	  .attr("x", 475)
-	  .attr("y", -10)
+	  .attr("x", 270)
+	  .attr("y", 420)
 	  .style("fill", "blue")
+	  .style("font-size", "20px")	  
+	  .style("font-weight", "bold")
 	  .text("Retail");
 
   svg.append("text")
-	  .attr("x", 460)
-	  .attr("y", 45)
-	  .style("fill", "green")
+	  .attr("x", 332)
+	  .attr("y", 420)
+	  .style("fill", "green")	  
+	  .style("font-size", "20px")
+	  .style("font-weight", "bold")
 	  .text("Entertainment");
 
   svg.append("text")
 	  .attr("x", 475)
-	  .attr("y", 150)
+	  .attr("y", 420)
 	  .style("fill", "red")
+	  .style("font-size", "20px")
+	  .style("font-weight", "bold")
 	  .text("Food");
 
   svg.append("text")
@@ -224,20 +230,26 @@ var focus2 = svg.append("g")
 	focus2.append("circle")
 		.attr("r", "4.5");
 
-var text1 =	focus.append("text")
-		.attr("x", "5")
-		.attr("dy", "-10em") //-150px
-		.style("fill", "blue");
+var text1 =	svg.append("text")
+		.attr("x", 276)
+		.attr("y", 445) //-150px
+		.style("fill", "blue")		
+		.style("font-size", "20px")
+		.style("font-weight", "bold");
 
-var text2 =	focus.append("text")
-		.attr("x", "9")
-		.attr("dy", "-5em") //-100px
-		.style("fill", "green");
+var text2 =	svg.append("text")
+		.attr("x", 376)
+		.attr("y", 445) //-100px
+		.style("fill", "green")		
+	  	.style("font-size", "20px")
+	  	.style("font-weight", "bold");
 
-var text3 = focus.append("text")
-		.attr("x", "9")
-		.attr("dy", "")
-		.style("fill", "red");
+var text3 = svg.append("text")
+		.attr("x", 479)
+		.attr("y", 445)
+		.style("fill", "red")		
+	  	.style("font-size", "20px")
+	  	.style("font-weight", "bold");
 
 	svg.append("rect")
 		.attr("class", "overlay")
